fix(item-details): fixed contrast for accessibility (#3750)
fix(item-details): fixed contrast for accesibility

--- a/src/features/item-details/ItemProperties.scss
+++ b/src/features/item-details/ItemProperties.scss
@@ -31,9 +31,9 @@
         &:focus {
             max-height: none;
             margin-left: 0;
-            padding: 7px;
+            padding: 6px;
             background-color: $bdl-gray-02;
-            border-color: $bdl-gray-10;
+            border-color: $bdl-box-blue;
         }
     }
 
